--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Usuarios ingresados</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container-fluid">
+    <header>
+        <h1>Header</h1>
+    </header>
+    <section class="container-fluid">
         <div class="alert alert-success" role="alert">
             <p id=init class="alert-heading"></p>
         </div>
-    </div>
-
+    </section>
+    <footer>Footer</footer>
 </body>
 <script>
     let registro = "#registro#";
